k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lcit-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lcit-backend
  template:
    metadata:
      labels:
        app: lcit-backend
    spec:
      containers:
      - name: lcit-backend
        image: ankitpatel020/lcit-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"

        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /api/health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: lcit-backend-svc
spec:
  selector:
    app: lcit-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
